adjustment in modal's z-index for add saro/procurement to fix overlaping issue with header

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -39,6 +39,10 @@ body {
     text-align: center;
 }
 
+.modal {
+  z-index: 9999 !important;
+}
+
 .modal-dialog-centered {
     display: flex;
     align-items: center;
